--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
         uses: goto-bus-stop/setup-zig@v2
         with:
           version: 0.14.0
+          cache: false
 
       - name: Run tests
         run: zig build test
